Fix IME position when window is wider than editor width.

BUG:478960

Before: ![Screenshot_20240215_223011.png](/uploads/df07e1418a4b7e7119736e7f018afc2c/Screenshot_20240215_223011.png)

After: ![Screenshot_20240215_222810.png](/uploads/5e1ea8867680e69d055bc1e40280b14c/Screenshot_20240215_222810.png)